<resources>
    <string name="app_name">فينك</string>
    <string name="title_home">Home</string>
    <string name="title_circle">My circle</string>
    <string name="title_chat">Chat</string>
    <string name="title_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="or_login_with">or</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one">Create one</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re Password</string>
    <string name="birth_of_date">Birth of date</string>
    <string name="your_address">Address</string>
    <string name="dd">DD/MM/YY</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="mobile">Mobile</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>


    <string name="facebook_app_id">2005122686266704</string>
    <string name="fb_login_protocol_scheme">fb2005122686266704</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_in_your_circle">Search in Your Circle</string>
    <string name="search_on_new_people">search on new People</string>
    <string name="add_to_my_circle">Add To My Circle</string>
    <string name="already_added">"already added"</string>
    <string name="cancel_request">"Cancel Request"</string>
    <string name="enter_name_please">Please Enter Your  Name</string>
    <string name="enter_email_please">Please Enter Your  Email</string>
    <string name="enter_phone_please">Please Enter Your  Phone</string>
    <string name="enter_message_please">Please Enter Your  Message</string>
    <string name="enter_password_please">Please Enter Your  Password</string>
    <string name="enter_re_password_please">Please Enter Your  Re Password</string>
    <string name="enter_birth_day_please">Please Enter Your  Birthday</string>

    <string name="passwords_not_match">Passwords not match</string>

    <string name="about_us">تم التطوير التطبيق على ايدى طلاب اكاديمية النيل للعلوم والتكنولوجيا كأحدي مشروعات التخرج للعام الدراسي 2018/2019
</string>
    <string name="contact_us">Contact us</string>

</resources>
