<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/overcast"
    tools:context=".Activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="11pt"
                android:textColor="@color/wight"
                android:text="@string/sign_up" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_img_profileLL"
            android:layout_width="@dimen/_120sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_height="@dimen/_120sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_img_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/user"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_16sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:text="@string/first_name"/>

                    <EditText
                        android:id="@+id/f_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@drawable/rounded_edittext"
                        android:paddingLeft="@dimen/_8sdp"
                        android:paddingRight="@dimen/_8sdp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:text="@string/last_name"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/l_name"
                        android:paddingRight="@dimen/_8sdp"
                        android:paddingLeft="@dimen/_8sdp"
                        android:background="@drawable/rounded_edittext"/>


                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorPrimary" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:text="@string/email"/>

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:paddingRight="@dimen/_8sdp"
                        android:paddingLeft="@dimen/_8sdp"
                        android:background="@drawable/rounded_edittext"/>


                </LinearLayout>



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorPrimary" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:text="@string/password"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:paddingRight="@dimen/_8sdp"
                        android:paddingLeft="@dimen/_8sdp"
                        android:background="@drawable/rounded_edittext"/>

                </LinearLayout>



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorPrimary" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:text="@string/re_password"/>

                    <EditText
                        android:id="@+id/re_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:paddingRight="@dimen/_8sdp"
                        android:paddingLeft="@dimen/_8sdp"
                        android:background="@drawable/rounded_edittext"/>

                </LinearLayout>



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorPrimary" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birth_of_date"
                    android:textSize="@dimen/_15sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp">

                        <EditText
                            android:id="@+id/birth_of_date"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:paddingRight="@dimen/_8sdp"
                            android:paddingLeft="@dimen/_8sdp"
                            android:background="@drawable/rounded_edittext"
                            android:hint="@string/dd" />

                    </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorPrimary" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:text="@string/gender"/>

                    <RadioGroup
                        android:id="@+id/radioGrp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <RadioButton
                            android:id="@+id/radioM"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:checked="true"
                            android:paddingRight="@dimen/_48sdp"
                            android:drawableRight="@drawable/male"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:text="Male"
                            />
                        <RadioButton
                            android:id="@+id/radioF"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:checked="false"
                            android:paddingRight="@dimen/_40sdp"
                            android:drawableRight="@drawable/female"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:text="Female"
                            />
                    </RadioGroup>



                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorPrimary" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_4sdp"
                        android:text="@string/mobile"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">



                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:layout_marginLeft="@dimen/_4sdp"
                            android:paddingRight="@dimen/_8sdp"
                            android:paddingLeft="@dimen/_8sdp"
                            android:background="@drawable/rounded_edittext"
                            android:hint="@string/phone_number" />


                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_32sdp"
                    android:background="@drawable/custome_button"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/wight"
                    android:textSize="14pt"
                    android:padding="@dimen/_4sdp"/>

            </LinearLayout>

        </LinearLayout>
</ScrollView>